--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-to-print": "^2.14.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
